log
Thu 20 Apr 2023 10:06:45 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3484192
Thu 20 Apr 2023 11:04:30 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
672f2cb
Thu 20 Apr 2023 11:05:54 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
76c7c11
Thu 20 Apr 2023 11:07:04 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
cbad4ea
Thu 20 Apr 2023 11:07:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb38c8a
Thu 20 Apr 2023 11:09:02 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
909baaa
Thu 20 Apr 2023 11:09:44 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
e6b4cca
Thu 20 Apr 2023 11:09:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8da451b
Thu 20 Apr 2023 11:10:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
ce2486f
Thu 20 Apr 2023 11:11:18 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
9e9dcb1
Thu 20 Apr 2023 11:12:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
319d143
Thu 20 Apr 2023 11:47:55 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:10: error: unused variable ‘pair’ [-Werror=unused-variable]
   59 |   Pair * pair = (Pair*) malloc (sizeof(Pair));
      |          ^~~~
treemap.c:60:6: error: ‘*new.pair’ is used uninitialized [-Werror=uninitialized]
   60 |   new->pair->key = key;
      |   ~~~^~~~~~
treemap.c:61:6: error: ‘*new.pair’ is used uninitialized [-Werror=uninitialized]
   61 |   new->pair->value = value;
      |   ~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
1586c68
Thu 20 Apr 2023 11:49:52 PM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:10: error: unused variable ‘pair’ [-Werror=unused-variable]
   59 |   Pair * pair = (Pair*) malloc (sizeof(Pair));
      |          ^~~~
treemap.c:60:6: error: ‘*new.pair’ is used uninitialized [-Werror=uninitialized]
   60 |   new->pair->key = key;
      |   ~~~^~~~~~
treemap.c:61:6: error: ‘*new.pair’ is used uninitialized [-Werror=uninitialized]
   61 |   new->pair->value = value;
      |   ~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
355e8c7
Fri 21 Apr 2023 12:00:16 AM UTC: 
 treemap.c | 21 +++++++++------------
 1 file changed, 9 insertions(+), 12 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:10: error: unused variable ‘pair’ [-Werror=unused-variable]
   59 |   Pair * pair = (Pair*) malloc (sizeof(Pair));
      |          ^~~~
treemap.c:60:6: error: ‘*new.pair’ is used uninitialized [-Werror=uninitialized]
   60 |   new->pair->key = key;
      |   ~~~^~~~~~
treemap.c:61:6: error: ‘*new.pair’ is used uninitialized [-Werror=uninitialized]
   61 |   new->pair->value = value;
      |   ~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
004daab
